public/css/style.css
header {
    background-image: url(../img/header.jpg);
}

.form-horizontal .control-label {
    text-align: left !important;
}

i.white-icon {
    color: #fff;
}

hr {
    max-width: 20%;
}

a.white-icon {
    color: #fff;
}

.form-action {
    padding: inherit;
}

.top-buffer {
    margin-top: 20px;
}

input.width-controlled {
    width: 70%;
!important;
}

.nowrap-button {
    white-space: nowrap;
}

a.clickable-td {
    display: block;
    width: 100%;
    height: 100%;
    color: inherit;
    text-decoration: none;
}

.boston-bg {
    background-image: url(../img/boston.jpg);
}

.northeastern-bg {
    background-image: url(../img/nu.jpg);
    background-size: 100%;
}

.northeastern-ryder-bg {
    background-image: url(../img/nu_ryder.jpg);
    background-size: 100%;
}

